<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Nazwa aplikacji -->
    <string name="app_name">GigaNotatnik</string>
    <string name="app_title">Moje notatki</string>

    <!-- Ekran główny -->
    <string name="new_note">Nowa notatka tekstowa</string>
    <string name="audio_note">Nowa notatka głosowa</string>
    <string name="note_history">Historia notatek</string>
    <string name="back_to_main">Powrót do strony głównej</string>
    <string name="info">Informacje</string>

    <!-- Tworzenie notatki -->
    <string name="note_hint">Wpisz notatkę tekstową</string>
    <string name="save_text_note">Zapisz notatkę tekstową</string>
    <string name="record_note">Nagraj notatkę głosową</string>
    <string name="stop_recording">Wstrzymaj nagrywanie</string>
    <string name="speech_to_text">Rozpoznaj mowę</string>
    <string name="share_sms">Udostępnij przez SMS</string>
    <string name="note_saved">Zapisano notatkę</string>
    <string name="audio_saved">Zapisano notatkę głosową</string>
    <string name="note_title_hint">Wpisz tytuł</string>

    <!-- Historia notatek -->
    <string name="search_notes">Szukaj notatki</string>
    <string name="notes_sorted">Notatki zostały posortowane</string>

    <!-- Elementy listy -->
    <string name="note_content">Treść notatki</string>
    <string name="note_date">Data</string>
    <string name="share_note">Udostępnij</string>
    <string name="delete_note">Usuń</string>
    <string name="play_audio">Odtwórz</string>
    <string name="delete_audio">Usuń</string>
    <string name="audio_file_example">note_20231107_1824.3gp</string>
    <string name="NoteTitle">Tytuł notatki</string>
    <string name="CreateDate">Data utworzenia</string>
    <string name="ShareTxt">Udostępnij</string>
    <string name="DeleteStr">Usuń</string>
    <string name="ExampleCreateDate">08.11.2025 22:33</string>
    <string name="PlayStr">Odtwórz</string>
    <string name="NoteDetailsStr">Szczegóły notatki</string>
    <string name="ShowLocalizationStr">Pokaż lokalizację</string>
    <string name="SaveChangesStr">Zapisz zmiany</string>
    <string name="take_photo">Zrób zdjęcie</string>

    <!-- Usuwanie zdjecia-->
    <string name="delete_photo">Usuń zdjęcie</string>
    <string name="toggle_theme">Tryb</string>
</resources>
