<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Pole tytułu notatki -->
        <EditText
            android:id="@+id/editTextTitle"
            style="@style/AppEditText"
            android:hint="@string/note_title_hint"
            android:inputType="textCapSentences"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Pole treści notatki -->
        <EditText
            android:id="@+id/editTextNote"
            style="@style/AppEditText"
            android:minHeight="120dp"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSaveText"
            style="@style/AppButton"
            android:text="@string/save_text_note"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnRecord"
            style="@style/AppButton"
            android:text="@string/record_note"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnSpeechToText"
            style="@style/AppButton"
            android:text="@string/speech_to_text"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnBackToMain"
            style="@style/AppButton"
            android:text="@string/back_to_main"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>
