<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/background"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGoToCreate"
        style="@style/AppButton"
        android:layout_marginBottom="16dp"
        android:text="@string/new_note" />

    <Button
        android:id="@+id/btnRecord"
        style="@style/AppButton"
        android:text="@string/audio_note"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnGoToHistory"
        style="@style/AppButton"
        android:text="@string/app_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/themeToggleFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/toggle_theme"
        android:src="@drawable/ic_theme_auto"
        app:backgroundTint="@color/teal_700" />

</LinearLayout>
