<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:clickable="true"
    android:background="@android:color/white"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardBackground"
        android:padding="12dp">

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NoteTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/noteTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateDate"
            android:textSize="12sp"
            android:textColor="@color/textSecondary"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/cardBackground"

            android:gravity="end">

            <Button
                android:id="@+id/btnShareNote"
                style="@style/NoteActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShareTxt" />

            <Button
                android:id="@+id/btnDeleteNote"
                style="@style/NoteActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DeleteStr"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
